--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,19 +22,25 @@ html {
 .paystack-logo {
     max-width: 5rem;
 }
+
 .logo {
     width: 100%;
 }
 .log {
-    display: flex;
+   display: flex;
+   color: black;
     text-decoration: none;
 }
-.nav-list {
+.nav-list  {
     display: flex;
     gap: 1rem;
     list-style: none;
     font-size: 1.6rem;
     font-weight: 550;
+}
+.nav-list li a {
+    text-decoration: none;
+    color: black;
 }
 .second-nav {
     display: flex;
@@ -47,7 +53,7 @@ html {
     font-weight: 550;
 }
 .btn {
-    background-color: #3bb75e;
+    background-color: 
     border: none;
     padding-left: 2em;
     padding-right: 2em;
@@ -59,6 +65,7 @@ html {
 }
 .modern {
     position: absolute;
+    
     top: 50%;
     font-size: 3rem;
     font-weight: 600;
