--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,8 +53,8 @@ html {
     font-weight: 550;
 }
 .btn {
-    background-color: 
-    border: none;
+    background-color: #3bb75e;
+    border: none;  
     padding-left: 2em;
     padding-right: 2em;
     padding-top: 1em;
