--- a/styles/customers.css
+++ b/styles/customers.css
@@ -88,6 +88,7 @@ li {
     width: 45rem;
     max-height: 30rem;
     border-radius: .5rem;
+   
 
    
 }
@@ -101,7 +102,8 @@ li {
    width: 100%;
 }
 .mtn-review article {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    font-weight: 100;
     padding-bottom: 2.5rem;
     max-width: 100%;
 }
@@ -131,5 +133,7 @@ li {
     align-items: center;
     justify-content: center;
     padding-top: 4rem;
+    margin-left: 16rem;
+    margin-right: 16rem;
    
 }
