--- a/styles/customers.css
+++ b/styles/customers.css
@@ -14,36 +14,33 @@ html {
 
 .nav {
     display: flex;
-    position: relative;
     justify-content: space-between;
-    margin-top: 2rem;
-    margin-left: 6rem;
-    margin-right: 6rem;
-    position: relative;
-    padding-bottom: 2rem;   
+    position: fixed; 
+    width: 100%;
+    padding-top: 1rem;
+    z-index: 100;
+   
+   
 }
 .paystack {
     display: flex;
 }
-section .nav-1 {
-    position: fixed;
+.nav .nav-1 {
+    width: 100%;
+   
+    padding-left: 6rem;
+     
     
 }
  .nav .nav-1 {
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 2rem;
-    
-    
+    gap: 2rem; 
 }
-    .nav-1 .paystack {
-        max-width: 12rem;
-        
-    
-    }
+   
     .nav-1 .paystack .paystack-logo {
-        max-width: 35%;
+        width: 10rem;
     }
 
 .nav .nav-1 a {
@@ -52,7 +49,6 @@ section .nav-1 {
     text-decoration: none;
     color: black;
     font-size: 1.9rem;
-
     font-family: MyFont, Arial, Helvetica, sans-serif;
     
 }
@@ -63,6 +59,7 @@ section .nav-1 {
     align-items: center;
     list-style: none;
     gap: 2rem;
+    padding-right: 6rem;
 
 }
 .nav .nav-2 a {
@@ -77,7 +74,9 @@ padding: 1rem 2rem;
 border-radius: .5rem;
 border: none;
 background-color: #3bb75e;
+color: white;
 height: 5rem;
+width: 16rem;
 }
 .testimonials {
     display: flex;
@@ -86,7 +85,7 @@ height: 5rem;
     justify-content: center;
     padding-top: 10rem;
     background-color: #eaf6fc;
-    height: 50vh;
+    height: 50rem;
     margin-bottom: 12rem;
 }
 .customer-testimonials {
@@ -146,11 +145,16 @@ height: 5rem;
 .profile {
     display: flex;
     align-items: center;
+   
     gap: 1.5rem;
+    
 }
 .profile-img {
-    border-radius: 100%;
     max-width: 6rem;
+    width: 100%;
+    border-radius: 100%;
+    border-radius: ;
+ 
 }
 .profile-article {
     display: flex;
@@ -163,4 +167,11 @@ height: 5rem;
     font-size: 1.5rem;
     font-weight: 200;
 }
+.bottom {
+    padding-top: 2rem;
+}
 
+ .online {
+    font-size: 1.5rem;
+    color: #74848a;
+}
