--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,123 +6,82 @@
 
 html {
     font-size: 62.5%;
-    margin-left: 3rem;
-    margin-right: 3rem;
 }
 
 .nav {
-    margin-top: 2rem;
     display: flex;
     justify-content: space-between;
-  
-}
-.first-nav {
-    display: flex;
-} 
-.paystack-logo {
-    max-width: 5rem;
-}
-
-.logo {
+    position: fixed; 
     width: 100%;
+    padding-top: 1rem;
+    z-index: 100; 
+    
+   
 }
-.log {
-   display: flex;
-   color: black;
-    text-decoration: none;
-}
-.nav-list  {
+.paystack {
     display: flex;
-    gap: 1rem;
-    list-style: none;
-    font-size: 1.6rem;
-    font-weight: 550;
 }
-.nav-list li a {
+.nav .nav-1 {
+    width: 100%;
+   
+    padding-left: 6rem;
+     
+    
+}
+ .nav .nav-1 {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 2rem; 
+}
+   
+    .nav-1 .paystack .paystack-logo {
+        width: 10rem;
+    }
+
+.nav .nav-1 a {
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: black;
+    font-size: 1.9rem;
+    font-family: MyFont, Arial, Helvetica, sans-serif;
+    
 }
-.second-nav {
+
+
+.nav .nav-2 {
     display: flex;
-}
-.nav-list-2 {
-    display: flex;
-    gap: 1rem;
+    align-items: center;
     list-style: none;
-    font-size: 1.6rem;
-    font-weight: 550;
+    gap: 2rem;
+    padding-right: 6rem;
+
+}
+.nav .nav-2 a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.9rem;
+    font-family: MyFont, Arial, Helvetica, sans-serif;
+    
 }
 .btn {
-    background-color: #3bb75e;
-    border: none;  
-    padding-left: 2em;
-    padding-right: 2em;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    border-radius: 1rem;
-    color: white;
-
+padding: 1rem 2rem;
+border-radius: .5rem;
+border: none;
+background-color: #3bb75e;
+color: white;
+height: 5rem;
+width: 16rem;
 }
-.modern {
-    position: absolute;
-    
-    top: 50%;
-    font-size: 3rem;
-    font-weight: 600;
-    max-width: 50rem;
-}
-.body-image {
-    position: relative;
-
-}
-.modern {
-    margin-left: 5rem;
-}
-.modern article {
-    width: 100%;
-}
-.modern article h2 {
-    width: 100%;
-}
-.modern article .abt-paystack {
-    font-size: 2rem;
-    font-weight: 300;
-}
-.modern  .btn {
-    margin-top: 3rem;
-    font-size: 1.5rem;
-}
-.contact-sales {
-    color:  #3bb75e;
-    text-decoration: none;
-    font-size: 2rem;
-}
-
-.modern .create {
-   display: flex;
-   align-items: center;
-    gap: 2rem;
-
-}
-.modern .create .contact-sales {
-    padding-top: 2rem;
-}
-.modern section .trusted {
-    padding-top: 11rem;
-    font-size: 2rem;
-}
-.we-trust {
-    padding-top: 2rem;
+.main {
+    padding-left: 4rem;
     display: flex;
-    gap: 1.5rem;
-
-} 
-
-section .we-trust .c-logo .u-lazyload--is-done {
-  height: 3rem;
+    background-color:#F1FEF4;
+    height: 100vh;
+    width: 100%;
 }
-
-.watch {
-    font-weight: 500;
-    font-size: 1.7rem;
+.main {
+    display: flex;
+    align-items: center;
 }
