--- a/styles/customers.css
+++ b/styles/customers.css
@@ -49,8 +49,10 @@ html {
     text-decoration: none;
     color: black;
     font-size: 1.9rem;
-    font-family: MyFont, Arial, Helvetica, sans-serif;
-    
+    font-family: MyFont, Arial, Helvetica, sans-serif; 
+}
+.nav .nav-1 a:hover {
+    color: blue;
 }
 
 
@@ -68,6 +70,9 @@ html {
     font-size: 1.9rem;
     font-family: MyFont, Arial, Helvetica, sans-serif;
     
+}
+.nav .nav-2 a:hover {
+    color: blue;
 }
 .btn {
 padding: 1rem 2rem;
