--- a/styles/styles.css
+++ b/styles/styles.css
@@ -475,8 +475,32 @@ height: 100%;
     width: 20rem;
     height: 6rem;
 }
-footer {
-    margin: 1rem 8rem;
-    display: flex;
-    justify-content: space-between;
+.footer1,
+.footer2{
+    display: grid;
+    grid-template-columns:auto auto auto auto;
+    margin-left: 80px ;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #011B33;
+    margin-bottom: 30px;
+}
+footer h3{
+    font-size: 20px;
+    margin-bottom: 12px;
+    margin-top: 30px;
+}
+.footer1 ul{
+    list-style-type: none;
+    font-size: 16px;
+}
+.footer1 ul li{
+    margin-bottom: 12px;
+}
+.footer1 ul li:hover{
+    color: rgb(72, 156, 253);
+    cursor: pointer;
+    transition: ease-in-out 0.5s;
+}
+.footer2 p{
+    width: 200px;
 }
