--- a/styles/styles.css
+++ b/styles/styles.css
@@ -475,19 +475,19 @@ height: 100%;
     width: 20rem;
     height: 6rem;
 }
-.footer1,
-.footer2{
-    display: grid;
-    grid-template-columns:auto auto auto auto;
-    margin-left: 80px ;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #011B33;
-    margin-bottom: 30px;
+.footer1 {
+    display: flex;
+    margin: 3rem 5rem;
+    justify-content: space-evenly;
+    padding-bottom: 3rem;
+    border-bottom: .01rem solid rgba(218, 216, 216, 0.639);
+    width: 140rem;
 }
-footer h3{
-    font-size: 20px;
-    margin-bottom: 12px;
-    margin-top: 30px;
+
+.footer1 h3{
+    font-size: 2rem;
+    margin-bottom: 1.2rem;
+    margin-top: 3rem;
 }
 .footer1 ul{
     list-style-type: none;
@@ -501,6 +501,45 @@ footer h3{
     cursor: pointer;
     transition: ease-in-out 0.5s;
 }
-.footer2 p{
-    width: 200px;
+.footer2 {
+    display: flex;
+    margin: 3rem 5rem;
+    justify-content: space-evenly;
+    padding-bottom: 3rem;
+    border-bottom: .01rem solid rgba(218, 216, 216, 0.639);
+    width: 140rem;
+}
+
+.footer2 h3{
+    font-size: 2rem;
+    margin-bottom: 1.2rem;
+    margin-top: 3rem;
+}
+.footer2 ul{
+    list-style-type: none;
+    font-size: 1.6rem;
+}
+.footer2 ul li{
+    margin-bottom: 1.2rem;
+}
+.blue {
+    cursor: pointer;
+    color: #0BA4DB;
+}
+.footer2 ul li .social-fig {
+    max-width: 16rem;
+    display: flex;
+    gap: 1rem;
+}
+.footer2 ul li .social-fig img {
+width: 100%;
+}
+.footer2 ul  .stripe {
+    width: 8rem;
+}
+.footer2 ul  .stripe img {
+    width: 100%;
+}
+.footer2 ul .stripe-li {
+    color: #011b335f
 }
